# py_web_module_11_fastapi_v2

./: .gitignore  README.md  app2_pydantic.py  db.py  main.py  main_m1.py  main_restapi.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3b5b4e1e695a_init.py
src/database/: db.py
src/routes/: tags.py
