[tool.poetry]
name = "py-web-module-11-fastapi-v2"
version = "0.1.0"
description = "My FastAPI Lesson and practises"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
